[package]
name = "jlox-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.5", features = ["derive"] }
phf = { version = "0.11.1", default-features = false, features = ["macros"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
